# TROP-Estimator

./: README.md  dwcp_simulation_design_CPS.Rmd  pyproject.toml  results.txt
.github/workflows/: docs.yml
docs/source/: conf.py
notebookes/: DWCP_simulation_design_CPS_template.ipynb  OVB_analysis (1).ipynb  TROP_CPS (Table 2).ipynb  TROP_Germany (Table 2).ipynb  TROP_PENN (Table 2).ipynb  TROP_PENN-varying-N (Figure 2 and Figure 3).ipynb  TROP_PENN-varying-T (Figure 2 and Figure 3).ipynb  TROP_basque (Table 2).ipynb  TROP_bias-plot (Figure 1).ipynb  TROP_boatlift (Table 2).ipynb  TROP_components (Table 3).ipynb  TROP_factor-evidence (Table 4).ipynb  TROP_smoking (Table 2).ipynb  methods.py  utils.py
python_replication/: methods.py  table_4.py  utils.py
src/trop/: __init__.py  cv.py  estimator.py  test_cv.py
src/trop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_smoke_trop.py
